--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   },
   "dependencies": {
     "gatsby": "^2.4.3",
-    "gatsby-cli": "^2.12.44",
+    "gatsby-cli": "^2.12.45",
     "gatsby-plugin-manifest": "^2.1.1",
     "gatsby-plugin-offline": "^3.1.0",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sass": "^2.0.11",
+    "global": "^4.4.0",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
